# plotterforge

./: .gitignore  FEATURES.md  README.md  pyproject.toml  setup-macos.command  setup-windows.bat  start-studio.bat  start-studio.command
.github/workflows/: profile.yml
cavalry/: plotter-bridge.js
docs/: cavalry-tessellations.md  product-roadmap.md  profiling.md
engine/: __init__.py  accel.py  canvas.py  composition.py  engrave.py  fields.py  generate.py  genframe.py  geometry.py  image_ops.py  layer_clip.py  noise.py  params.py  pens.py  project.py  sampling.py  shape_field.py  sketch.py  streamline.py  styles.py  svg_io.py  tessellation.py  tessellation_library.py  tessellation_patterns.py  versioning.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
profiling/: cli.py  report.py  runner.py  worker.py
tests/: test_cavalry_bridge.py  test_clip_fidelity.py  test_clip_speedup.py  test_clippath.py  test_composition.py  test_docs.py  test_engrave.py  test_environment_contracts.py  test_fake_serial.py  test_fields.py  test_frontend_contracts.py  test_generate_crop.py  test_gpu_launch.py  test_image_api.py  test_multipen_plot.py  test_noise.py  test_plot_estimate.py  test_plot_job.py  test_plot_preview.py  test_projects.py  test_shape_field.py  test_svg_circle_fastpath.py  test_tessellation.py  test_tessellation_api.py  test_tessellation_library.py  test_tessellation_pfm.py  test_undo.py  test_versions.py
tools/: build_docs_reference.py  check_docs.py  profile_suite.py  render_feature_previews.py
web/: run.sh  server.py
(+148 files in other folders)
