[project]
name = "raster-to-plotter-svg"
version = "0.1.0"
description = "Convert a raster image to a plotter-ready SVG of stippled dots"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "svgwrite>=1.4.3",
    "flask>=3.0",
    "pyserial>=3.5",
    "svgelements>=1.8",
    "scipy>=1.13",
    "scikit-image>=0.24",
    "opencv-python-headless>=4.10",
]

[project.optional-dependencies]
# Optional GPU acceleration (Metal/MPS on macOS, CUDA on Windows/Linux).
# Install with: uv sync --extra gpu
gpu = [
    "torch>=2.4",
    "torchvision>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cu124", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
